# back-kid

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
app/: config.py  main.py
app/agent/: handler.py  prompts.py  quota.py  tools.py
app/api/v1/: __init__.py  alerts.py  corridors.py  map.py  (+6 more)
app/auth/: clerk.py
app/db/: session.py
app/integrations/: kapso_client.py  lhasa.py  open_meteo.py  osrm_client.py  overpass.py  tavily.py  twilio_client.py
app/models/: __init__.py  alert.py  base.py  corridor.py  municipality.py  pipeline_run.py  poi.py  realtime_landslide_event.py  realtime_rain_sample.py  rerouting_plan.py  risk_forecast.py  risk_segment.py  subscriber.py  zone.py  zone_risk_forecast.py
app/pipeline/: scheduler.py
app/schemas/: alert.py  corridor.py  forecast.py  municipality.py  pipeline_run.py  rerouting_plan.py
data/seed/: README.md
docs/: FRONTEND_INTEGRATION.md  PRD.md  architecture.md
docs/changes/: 2026-05-17-citizen-pivot.md
docs/modules/: agent.md  api.md  db.md  integrations.md  pipeline.md  services.md
migrations/: env.py
migrations/versions/: 04d36b213f6e_merge_zone_breakdown_into_subscribers_.py  a165ae827bd5_initial_schema_corridors_municipalities_.py  b7d9f1a6c2e4_add_risk_segments.py  c4e2a81f9b12_add_risk_segments_active_lookup_index.py  d1f7a3b5e908_add_risk_segments_latest_lookup_index.py  e2f8b3c1d4a5_add_subscribers.py  e9c4a2f1b8d3_citizen_pivot.py  f3a1b2c4d5e6_merge_subscribers_citizen_pivot.py  f3d8e1a47b29_zone_risk_breakdown.py
(+25 files in other folders)
