[project]
name = "back-kid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "geoalchemy2>=0.20.0",
    "httpx>=0.28.1",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "xarray>=2026.4.0",
]
